# website_to_rag

./: .gitignore  pyproject.toml  test.ipynb  test.md
src/website_to_rag/agents/: webcrawl_agent.py
src/website_to_rag/utils/: better_webpage_extractor.py  webpage_extractor.py
